--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     ]
   },
   "engines": {
-    "node": ">=12 <=16",
-    "npm": ">=6.0.0"
+    "npm": ">=6.0.0",
+    "node": ">=10.0.0"
   },
   "browserslist": {
     "production": [
